--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ body {
 
 body {
   font-family: 'Inter', sans-serif;
-  overflow-y: auto;
+  overflow: hidden;
   background-color: var(--color-background-app);
   color: var(--color-text-light);
   line-height: 1.6;
@@ -28,7 +28,7 @@ body {
 
 #root {
   display: flex;
-  min-height: 100%;
+  height: 100%;
 }
 
 h1,
